# mipi_camera_interface

./: CMakeLists.txt  README.md
include/: bmp.h  camera_control.h  device_operation.h  i2cbusses.h  image_process.h  parameter.h
src/: CMakeLists.txt  camera.note  camera_control.c  camera_image_grab.c  device_operation.c  i2cbusses.c  i2ctransfer.c  image_process.c  multi_thread_test.c  parameter.c  spidev_test.c
src/subs/: camera.note  camera_parameter.txt  check_image.py  debug.save
